syntax = "proto3";

option go_package = "/genproto";

package protos;

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Profile(ProfileRequest) returns (ProfileResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
  rpc Activity(ActivityRequest) returns (ActivityResponse) {}
  rpc Follow(FollowRequest) returns (FollowResponse) {}
  rpc Followers(FollowersRequest) returns (FollowersResponse) {}
}

message RegisterRequest {
  string username  = 1;
  string email     = 2;
  string password  = 3;
  string full_name = 4;
}

message RegisterResponse {
  string id         = 1;
  string username   = 2;
  string email      = 3;
  string full_name  = 4;
  string created_at = 5;
}

message LoginRequest {
  string email    = 1;
  string password = 2;
  string username = 3;

}

message LoginResponse {
  string username  = 1;
  string email     = 2;
  string full_name = 3;
}

message ProfileRequest {
  string user_id = 1;
}

message ProfileResponse {
  string id               = 1;
  string username         = 2;
  string email            = 3;
  string full_name        = 4;
  string bio              = 5;
  int32 countries_visited = 6;
  string created_at       = 7;
  string updated_at       = 8;
}

message UpdateProfileRequest {
  string full_name        = 1;
  string bio              = 2;
  int32 countries_visited = 3;
  string id               = 4;
}

message UpdateProfileResponse {
  string id               = 1;
  string username         = 2;
  string email            = 3;
  string full_name        = 4;
  string bio              = 5;
  int32 countries_visited = 6;
  string updated_at       = 7;
}

message Users {
  string id               = 1;
  string username         = 2;
  string full_name        = 3;
  int32 countries_visited = 4;
}

message GetUsersRequest {
  int32 limit  = 1;
  int32 offset = 2;
}

message GetUsersResponse {
  repeated Users users = 1;
  int32 total          = 2;
  int32 limit          = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool status_user = 1;
}

message ChangePasswordRequest {
  string email = 1;
}

message ChangePasswordResponse {
  bool message_password = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token  = 1;
  string refresh_token = 2;
  string expires_in    = 3;
}

message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {
  string message_logout = 1;
}

message ActivityRequest {
  string user_id = 1;
}

message ActivityResponse {
  string user_id           = 1;
  int32 stories_count      = 2;
  int32 comments_count     = 3;
  int32 likes_received     = 4;
  int32 countries_visited  = 5;
  string last_active       = 6;
}

message FollowRequest {
  string user_id = 1;
}

message FollowResponse {
  string follower_id = 1;
  string follow_id   = 2;
  string followed_at = 3;
}

message FollowersRequest {
  string user_id = 1;
}

message Followers {
  string id        = 1;
  string username  = 2;
  string full_name = 3;
}

message FollowersResponse {
  repeated Followers followers = 1;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  string message = 1;
}